Testing image input

--- a/google_models.ipynb
+++ b/google_models.ipynb
@@ -678,6 +678,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(r\"D:\\Krita\\Dots Animation\\frame0071.png\", \"rb\") as f:\n",
+    "    image = f.read()\n",
+    "\n",
+    "res = llm.invoke(f\"Describe this image {image}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content=\"The image data appears to be a PNG image, but it's heavily corrupted and likely unreadable by standard image viewers.  The initial bytes `\\\\x89PNG\\\\r\\\\n\\\\x1a\\\\n` are the standard PNG header, but the subsequent data is mostly gibberish, filled with repeating patterns and unusual character sequences.  There's no discernible visual structure or recognizable content that can be extracted from this data.  It's essentially random noise within a PNG container.\", additional_kwargs={}, response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'safety_ratings': []}, id='run-77c8a9a6-360d-4393-9edc-d4e20cd9e428-0', usage_metadata={'input_tokens': 165351, 'output_tokens': 102, 'total_tokens': 165453, 'input_token_details': {'cache_read': 0}})"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = client.models.generate_content(\n",
+    "    model = \"gemini-2.0-flash\",\n",
+    "    contents = [\n",
+    "        \"Describe this image\",\n",
+    "        types.Part.from_bytes(data = image, mime_type = \"image/png\")\n",
+    "        ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The image is mostly white. In the lower left quadrant, there is a curved stroke of color. The color transitions from yellow to green to blue. The yellow color is more faded and less saturated than the other two colors.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(res.candidates[0].content.parts[0].text)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
