--- a/basics.ipynb
+++ b/basics.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lcenv",
+   "display_name": "lenv",
    "language": "python",
    "name": "python3"
   },
