Using new virtual environment for another python notebook

--- a/google_thinking_model.ipynb
+++ b/google_thinking_model.ipynb
@@ -367,7 +367,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lcenv",
+   "display_name": "lenv",
    "language": "python",
    "name": "python3"
   },
