Getting structured output from LLM

--- a/basics.ipynb
+++ b/basics.ipynb
@@ -25,6 +25,103 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pydantic import BaseModel, Field\n",
+    "\n",
+    "class LLMOutput(BaseModel):\n",
+    "    need_human_input: bool = Field(..., description = \"Whether the model needs human input to continue\")\n",
+    "    response: str = Field(..., description = \"Response asking for the required human input\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "st_llm = llm.with_structured_output(LLMOutput)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "\n",
+    "system_prompt = \"You are an expert at generating briefs for a given topic.\"\n",
+    "\n",
+    "template = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\", system_prompt),\n",
+    "    (\"user\", \"{input}\")\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pst_llm = template | st_llm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = pst_llm.invoke(input = \"Generate a brief\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LLMOutput(need_human_input=True, response='I need more information to generate a brief. What is the topic of the brief?')"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'need_human_input': True,\n",
+       " 'response': 'I need more information to generate a brief. What is the topic of the brief?'}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.model_dump()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
