Testing langgraph node connections and state

--- a/basics.ipynb
+++ b/basics.ipynb
@@ -25,20 +25,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pydantic import BaseModel, Field\n",
     "\n",
     "class LLMOutput(BaseModel):\n",
-    "    need_human_input: bool = Field(..., description = \"Whether the model needs human input to continue\")\n",
-    "    response: str = Field(..., description = \"Response asking for the required human input\")"
+    "    need_human_input: bool = Field(..., description = \"Whether the model needs additional information from human to continue\")\n",
+    "    response: str = Field(..., description = \"Response of the LLM\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,16 +81,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LLMOutput(need_human_input=True, response='I need more information to generate a brief. What is the topic of the brief?')"
+       "LLMOutput(need_human_input=True, response='I need a topic to generate a brief for. What topic are you interested in?')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,17 +101,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'need_human_input': True,\n",
-       " 'response': 'I need more information to generate a brief. What is the topic of the brief?'}"
+       " 'response': 'I need a topic to generate a brief for. What topic are you interested in?'}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
