Verifying if a stray node (Node not connected to any END chain) can be used to execute tasks in background.
Conclusion : Not possible

--- a/langgraph_practice.ipynb
+++ b/langgraph_practice.ipynb
@@ -264,8 +264,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "aafe090a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TempState(TypedDict):\n",
+    "    temp: str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "ebd41995",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "builder2 = StateGraph(OverallState, input = InputState, output = OutputState)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "8d6dd446",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "def nodex(state: InputState) -> OverallState:\n",
+    "    return {\"input\": state[\"input\"] + \" updated\", \"output\": \"Start\"}\n",
+    "\n",
+    "def nodey(state: OverallState) -> OverallState:\n",
+    "    return {\"input\": state[\"input\"] + \" updated\", \"output\": state[\"output\"] + \" updated\"}\n",
+    "\n",
+    "def stray_node(state: OverallState):\n",
+    "    time.sleep(2)\n",
+    "    print(state[\"input\"])\n",
+    "\n",
+    "def nodez(state: OverallState) -> OutputState:\n",
+    "    return {\"output\": state[\"output\"] + \" End\"}\n",
+    "\n",
+    "builder2.add_node(\"nodex\", nodex)\n",
+    "builder2.add_node(\"nodey\", nodey)\n",
+    "builder2.add_node(\"stray_node\", stray_node)\n",
+    "builder2.add_node(\"nodez\", nodez)\n",
+    "\n",
+    "builder2.add_edge(START, \"nodex\")\n",
+    "builder2.add_edge(\"nodex\", \"nodey\")\n",
+    "builder2.add_edge(\"nodex\", \"stray_node\")\n",
+    "builder2.add_edge(\"nodey\", \"nodez\")\n",
+    "builder2.add_edge(\"nodez\", END)\n",
+    "\n",
+    "graph2 = builder2.compile()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "61190c73",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           +-----------+           \n",
+      "           | __start__ |           \n",
+      "           +-----------+           \n",
+      "                 *                 \n",
+      "                 *                 \n",
+      "                 *                 \n",
+      "             +-------+             \n",
+      "             | nodex |             \n",
+      "             +-------+             \n",
+      "            **        **           \n",
+      "          **            **         \n",
+      "         *                *        \n",
+      "+------------+         +-------+   \n",
+      "| stray_node |         | nodey |   \n",
+      "+------------+         +-------+   \n",
+      "                            *      \n",
+      "                            *      \n",
+      "                            *      \n",
+      "                       +-------+   \n",
+      "                       | nodez |   \n",
+      "                       +-------+   \n",
+      "                            *      \n",
+      "                            *      \n",
+      "                            *      \n",
+      "                      +---------+  \n",
+      "                      | __end__ |  \n",
+      "                      +---------+  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(graph2.get_graph().draw_ascii())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "81c2930b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi updated\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'output': 'Start updated End'}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph2.invoke({\"input\" : \"Hi\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a72c10d9",
    "metadata": {},
    "outputs": [],
    "source": []
