Execution sequence in case of stray node

--- a/langgraph_practice.ipynb
+++ b/langgraph_practice.ipynb
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "id": "ebd41995",
    "metadata": {},
    "outputs": [],
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "id": "8d6dd446",
    "metadata": {},
    "outputs": [],
@@ -293,16 +293,19 @@
     "import time\n",
     "\n",
     "def nodex(state: InputState) -> OverallState:\n",
+    "    print(\"x\")\n",
     "    return {\"input\": state[\"input\"] + \" updated\", \"output\": \"Start\"}\n",
     "\n",
     "def nodey(state: OverallState) -> OverallState:\n",
+    "    print(\"y\")\n",
     "    return {\"input\": state[\"input\"] + \" updated\", \"output\": state[\"output\"] + \" updated\"}\n",
     "\n",
     "def stray_node(state: OverallState):\n",
     "    time.sleep(2)\n",
-    "    print(state[\"input\"])\n",
+    "    print(\"stray\")\n",
     "\n",
     "def nodez(state: OverallState) -> OutputState:\n",
+    "    print(\"z\")\n",
     "    return {\"output\": state[\"output\"] + \" End\"}\n",
     "\n",
     "builder2.add_node(\"nodex\", nodex)\n",
@@ -321,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "id": "61190c73",
    "metadata": {},
    "outputs": [
@@ -365,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "id": "81c2930b",
    "metadata": {},
    "outputs": [
@@ -373,7 +376,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hi updated\n"
+      "x\n",
+      "y\n",
+      "stray\n",
+      "z\n"
      ]
     },
     {
@@ -382,7 +388,7 @@
        "{'output': 'Start updated End'}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
