Verifying if multiple states can be updated at once by returning a list of states.
Conclusion : Not possible

Workaround : Create another state with the list of states as keys and use that for passing data around

--- a/langgraph_practice.ipynb
+++ b/langgraph_practice.ipynb
@@ -399,8 +399,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "a72c10d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Input(TypedDict):\n",
+    "    input: str\n",
+    "\n",
+    "class State1(TypedDict):\n",
+    "    var1: str\n",
+    "\n",
+    "class State2(TypedDict):\n",
+    "    var2: str\n",
+    "\n",
+    "class State12(TypedDict):\n",
+    "    state1: State1\n",
+    "    state2: State2\n",
+    "\n",
+    "class State3(TypedDict):\n",
+    "    var3: str\n",
+    "\n",
+    "class State4(TypedDict):\n",
+    "    var4: str\n",
+    "\n",
+    "class Output(TypedDict):\n",
+    "    output: str\n",
+    "\n",
+    "class State34O(TypedDict):\n",
+    "    state3: State3\n",
+    "    state4: State4\n",
+    "    output: Output\n",
+    "\n",
+    "class Overall(TypedDict):\n",
+    "    temp: str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "f72322e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "builder3 = StateGraph(Overall, input = Input, output = State34O)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "b9dbf2b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def nodep(state: Input) -> State12:\n",
+    "    state1 = State1(var1 = state[\"input\"] + \" 1\")\n",
+    "    state2 = State2(var2 = state[\"input\"] + \" 2\")\n",
+    "\n",
+    "    return {\"state1\": state1, \"state2\": state2}\n",
+    "\n",
+    "def nodeq(state: State12) -> State34O:\n",
+    "    state3 = state[\"state1\"][\"var1\"] + \" 3\"\n",
+    "    state4 = state[\"state2\"][\"var2\"] + \" 4\"\n",
+    "    output = {\"output\" : \"output\"}\n",
+    "    \n",
+    "    return {\"state3\": state3, \"state4\": state4, \"output\": output}\n",
+    "\n",
+    "builder3.add_node(\"nodep\", nodep)\n",
+    "builder3.add_node(\"nodeq\", nodeq)\n",
+    "\n",
+    "builder3.add_edge(START, \"nodep\")\n",
+    "builder3.add_edge(\"nodep\", \"nodeq\")\n",
+    "builder3.add_edge(\"nodeq\", END)\n",
+    "\n",
+    "graph3 = builder3.compile()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "5a4a2c2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'state3': 'Hi 1 3', 'state4': 'Hi 2 4', 'output': {'output': 'output'}}"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph3.invoke({\"input\" : \"Hi\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f66ac53d",
    "metadata": {},
    "outputs": [],
    "source": []
