Adding notes for future reference

--- a/langgraph_practice.ipynb
+++ b/langgraph_practice.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b6f3487f",
+   "metadata": {},
+   "source": [
+    "## Langgraph node connections and states\n",
+    "\n",
+    "* Nodes accesses and returns states (Message passing technique)\n",
+    "* The return type of one node should match the input type of the next connected nodes\n",
+    "* Each node can return any state as long as it is defined (Not required for the node to be passed as a parameter in the node definition)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "c78396ef",
@@ -263,6 +275,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1a42be0e",
+   "metadata": {},
+   "source": [
+    "## Langgraph stray node testing for background task\n",
+    "\n",
+    "* End node will only get executed after the stray node execution is done. Not possible to use it for background tasks"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "aafe090a",
@@ -398,6 +420,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "20ac9c99",
+   "metadata": {},
+   "source": [
+    "## Updating and returning multiple states\n",
+    "\n",
+    "* Return value of each node is expected to be a dict. Not possible to return multiple dicts as a list\n",
+    "* To update or return multiple dicts from one node, need to define an intermediate state that has those multiple states as parameters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 74,
    "id": "a72c10d9",
@@ -494,6 +527,14 @@
    ],
    "source": [
     "graph3.invoke({\"input\" : \"Hi\"})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e2d2a75",
+   "metadata": {},
+   "source": [
+    "* Error specifying that the return state is expected to be a dict and not a list"
    ]
   },
   {
