Adding more notes

--- a/basics.ipynb
+++ b/basics.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Google models testing**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -24,6 +31,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Returning structured output from the LLM based on a defined Pydantic model**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
@@ -34,6 +48,13 @@
     "class LLMOutput(BaseModel):\n",
     "    need_human_input: bool = Field(..., description = \"Whether the model needs additional information from human to continue\")\n",
     "    response: str = Field(..., description = \"Response of the LLM\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Defining an LLM with structured output**"
    ]
   },
   {
@@ -62,6 +83,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Passing an input template for the structured LLM**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
@@ -77,6 +105,13 @@
    "outputs": [],
    "source": [
     "res = pst_llm.invoke(input = \"Generate a brief\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Getting a response from the structured LLM as a pydantic model**"
    ]
   },
   {
