--- a/langgraph_practice.ipynb
+++ b/langgraph_practice.ipynb
@@ -5,7 +5,7 @@
    "id": "b6f3487f",
    "metadata": {},
    "source": [
-    "## Langgraph node connections and states\n",
+    "## **Langgraph node connections and states**\n",
     "\n",
     "* Nodes accesses and returns states (Message passing technique)\n",
     "* The return type of one node should match the input type of the next connected nodes\n",
@@ -279,7 +279,7 @@
    "id": "1a42be0e",
    "metadata": {},
    "source": [
-    "## Langgraph stray node testing for background task\n",
+    "## **Langgraph stray node testing for background task**\n",
     "\n",
     "* End node will only get executed after the stray node execution is done. Not possible to use it for background tasks"
    ]
@@ -424,7 +424,7 @@
    "id": "20ac9c99",
    "metadata": {},
    "source": [
-    "## Updating and returning multiple states\n",
+    "## **Updating and returning multiple states**\n",
     "\n",
     "* Return value of each node is expected to be a dict. Not possible to return multiple dicts as a list\n",
     "* To update or return multiple dicts from one node, need to define an intermediate state that has those multiple states as parameters"
