Updating the notes

--- a/langgraph_memory.ipynb
+++ b/langgraph_memory.ipynb
@@ -9,7 +9,8 @@
     "\n",
     "* In the previous notebook the state is being overwritten by the nodes which means we are losing all the updates\n",
     "* If we want to preserve the previous data or make transformations on top of that data, we can use Anootations and reducer functions\n",
-    "* The following example shows three ways updates can be done. Either through messages, math operations or string operations"
+    "* The following example shows three ways updates can be done. Either through messages, math operations or string operations\n",
+    "* As is shown in the example, state is not preserved between two seperate runs. Each run is isolated. The state updates are only applicable until the execution of the graph. After the execution, the state gets reset"
    ]
   },
   {
